examples/test/testpolicy13553.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13553
  namespace: namespace236
spec:
  podSelector:
    matchLabels:
      key28: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value47
          key38: value4
          key36: value15
      podSelector:
        matchLabels:
          key35: value44
          key15: value5
